modified ::marker and add link1,2,3,4

--- a/tribute_page/index.html
+++ b/tribute_page/index.html
@@ -13,12 +13,114 @@
         <img id="image" src="https://lh3.googleusercontent.com/pw/ABLVV87aIvjMfpDt_f3lPM8A58TFDHFd1WlreyzbtjZ3qidfzydLJhsHcMszNxbcqSygj932Uq3EcfHU3iHAlIDYt59GquKuINVDkhspuS5ZCKDH9f6bf4Z9hyGReOhyr0jNf2o8Z6XLW4stBTdEf0fGYb4Fjw=w1200-h1200-s-no?authuser=0" alt="Yan-Bo Chen's ID photo">
         <figcaption id="img-caption">Yanbo Chen is an individual who consistently seeks to explore and challenge himself at various stages, and becomes greatly excited by encountering impressive and admirable individuals and phenomena.</figcaption>
       </figure>
-      <section id="tribute-info">
+      <section id="tribute-info" lang="zh">
         <h3 id="headline">Here's a timeline of Yan-Bo Chen's life</h3>
+        <ul>
+          <li><strong>2004.09</strong> - 進入台灣國立陽明交通大學醫學系。</li>
           <li>
+            <strong>2006</strong> - 系內透過 problem-based learning 的方式，讓 Yan-Bo 系統化地學習生理、病理、藥理、解剖學等醫學知識。因此學到 list Major、Minor 問題主動學習的方法。
+          </li>
+          <li class="travel">
+            <strong>2007.07</strong> - 第一次自助前往德國慕尼黑、楚格峰、班堡、科隆、海德堡、瑞士伯恩、蘇黎世等地。對歐洲的文藝遺產跟風景環境感到驚嘆。認為旅行跟接觸過往文化與當地人交流是可以供給自己能量的一輩子活動。
+          </li>
+          <li>
+            <strong>2009</strong> - clerkship at 台北榮總。
+          </li>
+          <li>
+            <strong>2010</strong> - internship at 和信治癌中心、台中榮總、台南奇美醫院、台北馬偕醫院、署立宜蘭醫院。了解癌症特色醫院、台灣北中南醫學中心、區域醫院的醫療常規與地區差異。
+          </li>
+          <li class="travel">
+            <strong>2010.04</strong> - 自助前往新加坡、澳洲 2week。感受新加坡、澳洲這兩個島嶼國家跟台灣的對比。
+          </li>
+          <li>
+            <strong>2011</strong> - internship at 高雄榮總。 Awarded “Excellent” in Objective Structured Clinical Examination (top 10% of interns)，醫學系畢業並考取台灣醫師執照。（台灣當時醫學學士制度為七年）
+          </li>
+          <li>
+            <strong>2012</strong> - 任義務役一般內科醫官（診治部隊同袍內科、家醫科、急診科相關疾病，ex: 急性過敏腫脹 agiodema、癲癇、感冒、皮膚過敏、腸胃炎等）。
+          </li>
+          <li class="travel">
+            <strong>2012</strong> - 服役休假期間參加世界公民島旅行活動以及 Novartis 藥廠的 biocamp。了解藥廠在進行藥品設計與市場行銷的考量、最後與團隊成員以英文進行小組發表。
+          </li>
+          <li>
+            <strong>2012.09-2013.08</strong> - 於署立豐原醫院進行不分科住院醫師訓練，協助內科主治醫師診治心臟衰竭、急性中風、敗血性休克、膽妄、洗腎病人、肝硬化病人感染等複雜性疾病。擔任第一助手協助外科主治醫師進行手術及術後醫囑開立與照顧工作。
+          </li>
+          <li>
+            <strong>2013.09-2018.01</strong> - 於高雄榮總進行紮實的麻醉專科訓練、<span class="travel">並投稿皇冠文化多篇醫療散文：溫暖、堅強的微笑、異鄉父女情等。</span>（台灣當時麻醉專科住院醫師訓練需 4 年）
+          </li>
+          <li class="travel"><strong>2015</strong> - 於高雄橋頭馬術中心進行 B1 馬術訓練半年。從第一次騎馬發現 20 分鐘相近慢跑 40 分鐘的流汗程度、決定透過騎馬訓練來運動並強化自己核心肌肉與端正姿勢。</li>
+          <li>
+            <strong>2016.09-2017.08</strong> - 於高雄榮總麻醉部任行政教學總醫師。第一線控管開刀房常規手術、與緊急手術處理流程。任手術委員會成員、處理高雄榮總麻醉部教學醫院評鑑資格審查。安排實習醫師計畫及教學、協助指導訓練中/新進麻醉護理師。
+          </li>
+          <li>
+            <strong>2017.10</strong> - 取得台灣麻醉專科醫師執照。
+          </li>
+          <li>
+            <strong>2018.01</strong> - 取得台灣疼痛專科醫師執照。對能運用所學致力於術後疼痛跟急性疼痛的治療，感到有意義與成就。
+          </li>
+          <li>
+            <strong>2018.01</strong> - 完成醫學回顧論文：<a class="link1" href="https://tbs.pain.org.tw/index.php/content/index?id=256" target="_blank">自發性顱內低血壓研究</a>。
+          </li>
+          <li>
+            <strong>2018.02-2019.09</strong> - 於高雄義大醫院任麻醉部、疼痛科主治醫師。處理臨床麻醉、無痛胃鏡大腸鏡、術後急性疼痛、癌症疼痛、慢性疼痛會診等業務。</a>。
+          </li>
+          <li class="IT">
+            <strong>2018.03-2018.07</strong> - 經當時台灣疼痛雜誌主編劉彥青醫師授權：協助完成<a class="link2" href ="https://tbs.pain.org.tw/" target="_blank">台灣疼痛雜誌</a>數位化初版。
+          </li>
+          <li>
+            <strong>2018.09</strong> - 2018.09 用 Blogger 開始個人部落格寫作。
+          </li>
+          <li>
+            <strong>2018.12</strong> - <span class="travel">第一次在日本北海道富良野 Furano 嘗試滑雪。</span>雖然第一次三天下來有點膝蓋及小腿的疲累，但是雪場的美景跟滑雪過程的寧靜、晚上泡溫泉消除疲勞的放鬆，也愛上這樣的運動。
+          </li>
+          <li>
+            <strong>2019.02</strong> - <span class="travel">第二次在日本東京苗場 Naeba, Tokyo 滑雪。</span>上下纜車比較順暢、開始學習併腿轉彎等進階技巧。
+          </li>
+          <li class="IT">
+            <strong>2019.03-2019.07</strong> - 參加第一屆南部AI經理人班，並與團隊成員合作提出概念作品，獲得佳作。在已經累積的醫學領域成果之外、開始涉獵當時電腦資訊在醫療端的應用。
+          </li>
+          <li>
+            <strong>2019.09</strong> - Yan-Bo 有感於手術患者、產婦無痛分娩肥胖族群日益增加，開始於高雄雅得麗生活診所協助 case 減重。運用醫學、營養知識與公共衛生統計數據、透過飲食與處方來協助 case 控制體重及高血壓糖尿病等慢性病。推廣預防醫學、功能醫學、益生菌等保健概念。
+          </li>
+          <li>
+            <strong>2019.11-2021.06</strong> - 協助家人處理胃癌，了解CART-T等免疫細胞治療在癌症的運用。
+          </li>
+          <li>
+            <strong>2020.01</strong> - <span class="travel">第三次在日本北海道佐幌度假村 Sahoro 滑雪。</span>是個小巧溫馨的滑雪場，有對新手相當友善的綠線滑雪道。
+          </li>
+          <li class="IT">
+            <strong>2020.09-2021.01</strong> -  於高雄中山大學進修資料分析碩士學分、進行R語言操作。
+          </li>
+          <li>
+            <strong>2021.07</strong> - 開始經營 facebook (meta) 粉絲專頁：<a class="link3" href="https://www.facebook.com/Dr.YanboChen/" target="_blank">Dr.YanboChen 陳彥伯</a>。
+          </li>
+          <li class="IT">
+            <strong>2021.09-2022.03</strong> - 對 Computer Science 產生興趣、開始為出國進修相關領域做準備，完成GRE考試 (322 Q:167 V:155)。
+          </li>
+          <li>
+            <strong>2021.10</strong> - 以專業來賓身份受邀參與民視電視台「醫學大聯盟」關於減重議題的錄影，分享 case 減重成果與相關知識。
+          </li>
+          <li>
+            <strong>2022.01</strong> - 以專業來賓身份受邀參與東森財經電視台「郁見新同學」「冬季肥胖」議題錄影，分享「怎麼吃火鍋不肥胖」。
+          </li>
+          <li class="IT">
+            <strong>2022.09-2023.01</strong> - 於臺北科技大學進修C語言並取得學分、於陽明交通大學進修線性代數並取得學分。
+          </li>
+          <li class="IT">
+            <strong>2023.03</strong> - 開始申請海外 Align Master's degree in Computer Science (MSCS)。並且透過線上資源 (ex: Coursera, Udemy) 學習 Data Structure 等CS知識。
+          </li>
+          <li>
+            <strong>2023.06</strong> - 完成 IELTS 考試。
+          </li>
+          <li class="IT">
+            <strong>2023.10</strong> - 收到 Align MSCS 錄取通知，預計 2024.09 學期開始。並著手準備學生簽證相關事宜。
+          </li>
+          <li class="IT">
+            <strong>2023.12-present</strong> - 透過網路資源 (ex: freecodecamp) 熟悉 html, css 語法與 git 操作。預計透過 Bootcamp 開始建立個人作品、並準備爭取國外實習與工作機會。
+          </li>
+        </ul>
         <h3>
           " If you have time, you could read more about this man on his
-          <a id="tribute-link" href="https://yanbochenmd.blogspot.com/p/fitness.html" target="_blank">personal blog</a>
+          <a id="tribute-link" class="link4" href="https://yanbochenmd.blogspot.com/p/fitness.html" target="_blank">personal blog</a>
           . "
         </h3>  
       </section>
