add blockquote for future use if needed

--- a/tribute_page/index.html
+++ b/tribute_page/index.html
@@ -118,6 +118,18 @@
             <strong>2023.12-present</strong> - 透過網路資源 (ex: freecodecamp) 熟悉 html, css 語法與 git 操作。預計透過 Bootcamp 開始建立個人作品、並準備爭取國外實習與工作機會。
           </li>
         </ul>
+      <!-- 如果要引用某段話的話，可以參考
+        <blockquote
+        cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm"
+        >
+        <p>
+          "Borlaug's life and achievement are testimony to the far-reaching
+          contribution that one man's towering intellect, persistence and
+          scientific vision can make to human peace and progress."
+        </p>
+        <cite>-- Indian Prime Minister Manmohan Singh</cite>
+        </blockquote> 
+      -->
         <h3>
           " If you have time, you could read more about this man on his
           <a id="tribute-link" class="link4" href="https://yanbochenmd.blogspot.com/p/fitness.html" target="_blank">personal blog</a>
